# hits-processCalculating

./: .gitignore  CMakeLists.txt  README.md  benchmark_final.py  main.cpp  results.csv
filters/: kernels.cl  opencl.cpp  opencl.h  openmp.cpp  openmp.h  sequential.cpp  sequential.h  simd.cpp  simd.h
